--- a/BTKitTester/Classes/Presentation/RuuviTag/Connectable/Connectable.storyboard
+++ b/BTKitTester/Classes/Presentation/RuuviTag/Connectable/Connectable.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Connectable View Controller-->
         <scene sceneID="3k2-U9-zN2">
             <objects>
-                <tableViewController id="Uhr-O6-bc1" sceneMemberID="viewController">
+                <tableViewController id="Uhr-O6-bc1" customClass="ConnectableViewController" customModule="BTKitTester" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="NWY-C0-5MD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
