--- a/BTKitTester/Classes/Presentation/RuuviTag/Connectable/Connectable.storyboard
+++ b/BTKitTester/Classes/Presentation/RuuviTag/Connectable/Connectable.storyboard
@@ -27,13 +27,35 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3O0-iA-TKV">
-                                    <rect key="frame" x="177.5" y="37" width="59" height="30"/>
-                                    <state key="normal" title="Connect"/>
-                                    <connections>
-                                        <action selector="connectButtonTouchUpInside:" destination="Uhr-O6-bc1" eventType="touchUpInside" id="0na-US-N1w"/>
-                                    </connections>
-                                </button>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4U0-C6-frM">
+                                    <rect key="frame" x="130.5" y="37" width="153" height="30"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3O0-iA-TKV">
+                                            <rect key="frame" x="0.0" y="0.0" width="59" height="30"/>
+                                            <state key="normal" title="Connect"/>
+                                            <connections>
+                                                <action selector="connectButtonTouchUpInside:" destination="Uhr-O6-bc1" eventType="touchUpInside" id="0na-US-N1w"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dAn-Z1-FMY">
+                                            <rect key="frame" x="75" y="0.0" width="78" height="30"/>
+                                            <state key="normal" title="Disconnect"/>
+                                            <connections>
+                                                <action selector="disconnectButtonTouchUpInside:" destination="Uhr-O6-bc1" eventType="touchUpInside" id="vzJ-hT-Yhr"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstItem="dAn-Z1-FMY" firstAttribute="leading" secondItem="3O0-iA-TKV" secondAttribute="trailing" constant="16" id="Rcz-Nw-MrO"/>
+                                        <constraint firstAttribute="bottom" secondItem="3O0-iA-TKV" secondAttribute="bottom" id="VIf-Rl-Gp5"/>
+                                        <constraint firstItem="3O0-iA-TKV" firstAttribute="top" secondItem="4U0-C6-frM" secondAttribute="top" id="VNJ-80-Bpt"/>
+                                        <constraint firstItem="3O0-iA-TKV" firstAttribute="leading" secondItem="4U0-C6-frM" secondAttribute="leading" id="dyl-6D-Wme"/>
+                                        <constraint firstItem="dAn-Z1-FMY" firstAttribute="top" secondItem="4U0-C6-frM" secondAttribute="top" id="e5J-qk-lLD"/>
+                                        <constraint firstAttribute="bottom" secondItem="dAn-Z1-FMY" secondAttribute="bottom" id="ivz-zB-cXD"/>
+                                        <constraint firstAttribute="trailing" secondItem="dAn-Z1-FMY" secondAttribute="trailing" id="u13-6Q-ocK"/>
+                                    </constraints>
+                                </view>
                                 <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nTh-ER-Lug">
                                     <rect key="frame" x="189.5" y="75" width="35" height="30"/>
                                     <state key="normal" title="Read"/>
@@ -44,11 +66,11 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="3O0-iA-TKV" firstAttribute="centerX" secondItem="Qrd-XJ-jzS" secondAttribute="centerX" id="7Rf-Z2-sIi"/>
+                                <constraint firstItem="4U0-C6-frM" firstAttribute="top" secondItem="Qrd-XJ-jzS" secondAttribute="bottom" constant="8" id="Bew-vz-ltJ"/>
+                                <constraint firstItem="nTh-ER-Lug" firstAttribute="top" secondItem="4U0-C6-frM" secondAttribute="bottom" constant="8" id="N0v-S6-K13"/>
                                 <constraint firstItem="Qrd-XJ-jzS" firstAttribute="centerX" secondItem="LL7-K6-3TG" secondAttribute="centerX" id="NfH-V8-oJT"/>
+                                <constraint firstItem="4U0-C6-frM" firstAttribute="centerX" secondItem="Qrd-XJ-jzS" secondAttribute="centerX" id="Y60-W2-tpR"/>
                                 <constraint firstItem="Qrd-XJ-jzS" firstAttribute="top" secondItem="LL7-K6-3TG" secondAttribute="top" constant="8" id="ZRD-iy-dCP"/>
-                                <constraint firstItem="3O0-iA-TKV" firstAttribute="top" secondItem="Qrd-XJ-jzS" secondAttribute="bottom" constant="8" id="w9r-Vw-3AP"/>
-                                <constraint firstItem="nTh-ER-Lug" firstAttribute="top" secondItem="3O0-iA-TKV" secondAttribute="bottom" constant="8" id="y0k-pI-Yrl"/>
                                 <constraint firstItem="nTh-ER-Lug" firstAttribute="centerX" secondItem="LL7-K6-3TG" secondAttribute="centerX" id="yx9-yW-4W4"/>
                             </constraints>
                         </view>
@@ -93,6 +115,7 @@
                     </tableView>
                     <connections>
                         <outlet property="connectButton" destination="3O0-iA-TKV" id="oju-A6-uxo"/>
+                        <outlet property="disconnectButton" destination="dAn-Z1-FMY" id="xW3-A1-sTU"/>
                         <outlet property="readButton" destination="nTh-ER-Lug" id="2Aa-Jb-CiV"/>
                         <outlet property="uuidOrMacLabel" destination="Qrd-XJ-jzS" id="ZDl-ox-Dqh"/>
                     </connections>
